{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 80,
  "lineage": "23d925c4-962d-f991-2e39-f3b2d2e3ab8b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ecommerce_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cf705abb093351c7",
            "arn": "arn:aws:ec2:us-east-1:438465144783:elastic-ip/eipalloc-0cf705abb093351c7",
            "association_id": "eipassoc-0237a934328d0910f",
            "domain": "vpc",
            "id": "eipalloc-0cf705abb093351c7",
            "instance": "i-0f409484bdb71ca20",
            "network_border_group": "us-east-1",
            "network_interface": "eni-04fbc1b2f332fef01",
            "private_dns": "ip-10-0-101-112.ec2.internal",
            "private_ip": "10.0.101.112",
            "public_dns": "ec2-18-213-143-55.compute-1.amazonaws.com",
            "public_ip": "18.213.143.55",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "ec2-ominx-eip"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "ec2-ominx-eip",
              "Project": "ominx"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.ecommerce_server",
            "aws_key_pair.ecommerce_key",
            "aws_security_group.ec2_sg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ecommerce_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08a6efd148b1f7504",
            "arn": "arn:aws:ec2:us-east-1:438465144783:instance/i-0f409484bdb71ca20",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f409484bdb71ca20",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "ec2-ominx-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04fbc1b2f332fef01",
            "private_dns": "ip-10-0-101-112.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.101.112",
            "public_dns": "ec2-44-223-67-62.compute-1.amazonaws.com",
            "public_ip": "44.223.67.62",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags_all": {
                  "Environment": "development",
                  "ManagedBy": "terraform",
                  "Project": "ominx"
                },
                "throughput": 125,
                "volume_id": "vol-027e99f7158f3be4e",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09bcc92be8d847339",
            "tags": {
              "Name": "ec2-ominx-server"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "ec2-ominx-server",
              "Project": "ominx"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d6c66fe5fc035829"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.ecommerce_key",
            "aws_security_group.ec2_sg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:438465144783:security-group/sg-0d6c66fe5fc035829",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d6c66fe5fc035829",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "API Gateway",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Auth Service",
                "from_port": 3001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3001
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS access",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "User UI",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "ec2-ominx-ec2-sg20250803061803712200000002",
            "name_prefix": "ec2-ominx-ec2-sg",
            "owner_id": "438465144783",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ec2-ominx-ec2-sg"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "ec2-ominx-ec2-sg",
              "Project": "ominx"
            },
            "timeouts": null,
            "vpc_id": "vpc-088afff1e135aa8a8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:438465144783:network-acl/acl-0009baff096310f72",
            "default_network_acl_id": "acl-0009baff096310f72",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0009baff096310f72",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "438465144783",
            "subnet_ids": [
              "subnet-09bcc92be8d847339",
              "subnet-0cd1f762bef51c199",
              "subnet-0daf3c7940dbfbe4c",
              "subnet-0ecc735361da69dd8"
            ],
            "tags": {
              "Environment": "development",
              "Name": "ec2-ominx-vpc-default"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "ec2-ominx-vpc-default",
              "Project": "ominx"
            },
            "vpc_id": "vpc-088afff1e135aa8a8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:438465144783:route-table/rtb-05d9eeb542c041f6a",
            "default_route_table_id": "rtb-05d9eeb542c041f6a",
            "id": "rtb-05d9eeb542c041f6a",
            "owner_id": "438465144783",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "development",
              "Name": "ec2-ominx-vpc-default"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "ec2-ominx-vpc-default",
              "Project": "ominx"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-088afff1e135aa8a8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:438465144783:security-group/sg-02d50f7da002768fb",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-02d50f7da002768fb",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "438465144783",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "development",
              "Name": "ec2-ominx-vpc-default"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "ec2-ominx-vpc-default",
              "Project": "ominx"
            },
            "vpc_id": "vpc-088afff1e135aa8a8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b88d98d788cb3561",
            "arn": "arn:aws:ec2:us-east-1:438465144783:elastic-ip/eipalloc-0b88d98d788cb3561",
            "association_id": "eipassoc-058c9d2e0439276ab",
            "domain": "vpc",
            "id": "eipalloc-0b88d98d788cb3561",
            "network_border_group": "us-east-1",
            "network_interface": "eni-06bb123404b7d13a2",
            "private_dns": "ip-10-0-101-196.ec2.internal",
            "private_ip": "10.0.101.196",
            "public_dns": "ec2-34-195-221-193.compute-1.amazonaws.com",
            "public_ip": "34.195.221.193",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "development",
              "Name": "ec2-ominx-vpc-us-east-1a"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "ec2-ominx-vpc-us-east-1a",
              "Project": "ominx"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:438465144783:internet-gateway/igw-0ed3b55383fa052e9",
            "id": "igw-0ed3b55383fa052e9",
            "owner_id": "438465144783",
            "tags": {
              "Environment": "development",
              "Name": "ec2-ominx-vpc"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "ec2-ominx-vpc",
              "Project": "ominx"
            },
            "vpc_id": "vpc-088afff1e135aa8a8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b88d98d788cb3561",
            "association_id": "eipassoc-058c9d2e0439276ab",
            "connectivity_type": "public",
            "id": "nat-0f01feec976a47538",
            "network_interface_id": "eni-06bb123404b7d13a2",
            "private_ip": "10.0.101.196",
            "public_ip": "34.195.221.193",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-09bcc92be8d847339",
            "tags": {
              "Environment": "development",
              "Name": "ec2-ominx-vpc-us-east-1a"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "ec2-ominx-vpc-us-east-1a",
              "Project": "ominx"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-03abaa025366057191080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0f01feec976a47538",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03abaa02536605719",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ed3b55383fa052e9",
            "id": "r-rtb-0558aa0cff885e5db1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0558aa0cff885e5db",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:438465144783:route-table/rtb-03abaa02536605719",
            "id": "rtb-03abaa02536605719",
            "owner_id": "438465144783",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f01feec976a47538",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "development",
              "Name": "ec2-ominx-vpc-private"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "ec2-ominx-vpc-private",
              "Project": "ominx"
            },
            "timeouts": null,
            "vpc_id": "vpc-088afff1e135aa8a8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:438465144783:route-table/rtb-0558aa0cff885e5db",
            "id": "rtb-0558aa0cff885e5db",
            "owner_id": "438465144783",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ed3b55383fa052e9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "development",
              "Name": "ec2-ominx-vpc-public"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "ec2-ominx-vpc-public",
              "Project": "ominx"
            },
            "timeouts": null,
            "vpc_id": "vpc-088afff1e135aa8a8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08c73ff0ee8319927",
            "route_table_id": "rtb-03abaa02536605719",
            "subnet_id": "subnet-0ecc735361da69dd8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00237afd35ad7269f",
            "route_table_id": "rtb-03abaa02536605719",
            "subnet_id": "subnet-0cd1f762bef51c199"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08c6386ac927b3b24",
            "route_table_id": "rtb-0558aa0cff885e5db",
            "subnet_id": "subnet-09bcc92be8d847339"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06b6ee65aabc271fe",
            "route_table_id": "rtb-0558aa0cff885e5db",
            "subnet_id": "subnet-0daf3c7940dbfbe4c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:438465144783:subnet/subnet-0ecc735361da69dd8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ecc735361da69dd8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "438465144783",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "development",
              "Name": "ec2-ominx-vpc-private-us-east-1a"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "ec2-ominx-vpc-private-us-east-1a",
              "Project": "ominx"
            },
            "vpc_id": "vpc-088afff1e135aa8a8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:438465144783:subnet/subnet-0cd1f762bef51c199",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cd1f762bef51c199",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "438465144783",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "development",
              "Name": "ec2-ominx-vpc-private-us-east-1b"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "ec2-ominx-vpc-private-us-east-1b",
              "Project": "ominx"
            },
            "vpc_id": "vpc-088afff1e135aa8a8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:438465144783:subnet/subnet-09bcc92be8d847339",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09bcc92be8d847339",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "438465144783",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "development",
              "Name": "ec2-ominx-vpc-public-us-east-1a"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "ec2-ominx-vpc-public-us-east-1a",
              "Project": "ominx"
            },
            "vpc_id": "vpc-088afff1e135aa8a8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:438465144783:subnet/subnet-0daf3c7940dbfbe4c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0daf3c7940dbfbe4c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "438465144783",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "development",
              "Name": "ec2-ominx-vpc-public-us-east-1b"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "ec2-ominx-vpc-public-us-east-1b",
              "Project": "ominx"
            },
            "vpc_id": "vpc-088afff1e135aa8a8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:438465144783:vpc/vpc-088afff1e135aa8a8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0009baff096310f72",
            "default_route_table_id": "rtb-05d9eeb542c041f6a",
            "default_security_group_id": "sg-02d50f7da002768fb",
            "dhcp_options_id": "dopt-02bc30e61d3ea2039",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-088afff1e135aa8a8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05d9eeb542c041f6a",
            "owner_id": "438465144783",
            "tags": {
              "Environment": "development",
              "Name": "ec2-ominx-vpc"
            },
            "tags_all": {
              "Environment": "development",
              "ManagedBy": "terraform",
              "Name": "ec2-ominx-vpc",
              "Project": "ominx"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}